convert text exercise properly to a DTO in the client